# agentic-bias-lens

./: .env.example  .gitignore  .pre-commit-config.yaml  ETHICS.md  LICENSE  Makefile  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: experiment.yaml  models.yaml  rosters.yaml  rubric.md
config/prompts/: accuracy.md  bias.md  finalizer.md  guard.md  research.md  verbose.md
docs/: PROCESS.md  assignment-writeup.md  sources.md  study-v2-outcome-analysis.md
docs/superpowers/plans/: 2026-07-06-agentic-bias-lens.md
docs/superpowers/specs/: 2026-07-06-agentic-bias-lens-design.md
examples/: README.md
examples/mock-run/: contact_sheet.html  manifest.json  prompts.json  prompts.md  report.md  scores.json
scripts/: run-study.ps1
src/agentic_bias_lens/: __init__.py  agents.py  capabilities.py  cli.py  config.py  pipeline.py  provenance.py  redaction.py  registry.py  reliability.py  report.py  rubric_spec.py  runner.py  scoring.py  watermark.py
tests/: conftest.py  test_capabilities.py  test_claude_cli.py  test_cli.py  test_concurrency_and_retry.py  test_config.py  test_dry_run_e2e.py  test_factory.py  test_fakes.py  test_image_style.py  test_no_images_committed.py  test_partial_run.py  test_pipeline_shared_impl.py  test_prompts_present.py  test_provenance.py  test_redaction.py  test_registry_degradation.py  test_reliability.py  test_scoring_aggregation.py  test_smoke.py  test_transport_anthropic.py  test_transport_images.py  test_transport_judges.py  test_transport_openai_compat.py  test_watermark.py
(+10 files in other folders)
